# home-assistant-jatekukko

./: .dprint.jsonc  .gitignore  .lefthook.yaml  .pre-commit-config.yaml  .prettierignore  .release-please-manifest.json  CHANGELOG.md  bandit.yaml  hacs.json  pyproject.toml  requirements-dev.txt
.config/: mise.toml
.github/: release-please-config.json  renovate.json
.github/workflows/: check.yml  hacs.yaml  hassfest.yaml  release-drafter.yml  release.yml
custom_components/jatekukko/: __init__.py  calendar.py  config_flow.py  const.py  coordinator.py  manifest.json  models.py  sensor.py  strings.json
custom_components/jatekukko/translations/: en.json
requirements/: dev-requirements.txt
