[project]
name = "home-assistant-jatekukko"
dynamic = ["version"]
requires-python = ">=3.12"

[tool.mypy]
python_version = "3.12"
enable_error_code = "ignore-without-code,redundant-self,truthy-iterable"
strict = true
warn_unreachable = true

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN", # Maybe sometime
  "D203", # Ping/pong with D211
  "D213", # Ping/pong with D212
  "TCH", # Maybe sometime
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  # (keep order of ignores here same as ^there for maintainability)
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]

[tool.ruff.lint.isort]
combine-as-imports = true # Home Assistant preference
force-sort-within-sections = true # Home Assistant preference

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", "testing_config"]
log_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(threadName)s %(name)s:%(filename)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
